<resources>
  <string name="app_name">Bikroy</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="task">Task</string>
  <string name="nirikkhon">যাচাই</string>
  <string name="inventory">Inventory</string>
  <string name="activity_log">Activity Log</string>
  <string name="roster_management">Roster Management</string>
  <string name="history">History</string>
  <string name="chat">Chat</string>
  <string name="site_map">Site Map</string>
  <string name="statistics">Statistics</string>
  <string name="issue">Issue</string>
  <string name="bills">Bills</string>
  <string name="add_bill">Add Bill</string>
  <string name="submit">সাবমিট</string>
  <string name="date">Date</string>
  <string name="remarks">Remarks</string>
  <string name="approved_pending_amount">Approved Pending Amount</string>
  <string name="disbursed_amount">Disbursed Amount</string>
  <string name="bill_details">Bill Details</string>
  <string name="something_went_wrong">Something went wrong!</string>
  <string name="rejected">Rejected</string>
  <string name="assigned_list">Assigned List</string>
  <string name="accepted_list">Accepted List</string>
  <string name="completed_list">Completed List</string>
  <string name="in_progress_list">In-Progress List</string>
  <string name="task_details">Task Details</string>
  <string name="ticket_title">Ticket Title</string>
  <string name="consumer_name">Consumer Name</string>
  <string name="consumer_mobile">Consumer Mobile</string>
  <string name="consumer_address">Consumer Address</string>
  <string name="consumer_thana">Consumer Thana</string>
  <string name="consumer_district">Consumer District</string>
  <string name="ticket_remark">Ticket Remark</string>
  <string name="device_name">Device Name</string>
  <string name="ticket_category_code">Ticket Category Code</string>
  <string name="ticket_start_date">Ticket Start Date</string>
  <string name="ticket_end_date">Ticket End Date</string>
  <string name="ticket_status">Ticket Status</string>
  <string name="ticket_status_text">Ticket Status Text</string>
  <string name="ticket_category_title">Ticket Category Title</string>
  <string name="ticket_code">Ticket Code</string>
  <string name="print_memo_text">যদি কোন কারণে মেমো প্রিন্ট না হয়, মেমো সেকশন থেকে আবার প্রিন্ট করতে পারবেন।</string>
  <string name="trade_support">ট্রেড সাপোর্ট</string>
  <string name="take_picture">ছবি তুলুন</string>
  <string name="qc">QC</string>
  <string name="print">প্রিন্ট করুন</string>
  <string name="total">মোট</string>

  <string name="issue_type">Issue Type</string>
  <string name="status">Status</string>
  <string name="priority">Priority</string>
  <string name="categories">Catagory</string>

  <string name="entered">Attendance : Enterd</string>
  <string name="exit">Attendance : Exit</string>
  <string name="not_yet">Attendance : Not Yet</string>
  <string name="bill_image">Bill Image</string>

  <string-array name="spinnerItems">
    <item>Click here to select</item>
    <item>Open</item>
    <item>In Progress</item>
    <item>Close</item>
  </string-array>

  <string name="btn_submit">SUBMIT</string>
  <string name="btn_attach_image">ATTACH IMAGE</string>

  <string name="standard">Standard</string>
  <string name="expense">Expense</string>
  <string name="advance">Advance</string>
  <string name="urgent">Urgent</string>
  <string name="bill_entry">Bill Entry</string>
  <string name="requisition">Requisition</string>

  <string name="permission_rationale">Location permission is needed for core functionality</string>
  <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

  <string name="settings">Settings</string>
  <string name="ok">OK</string>
  <string name="request_updates">Request updates</string>
  <string name="remove_updates">Remove updates</string>
  <string name="unknown_location">Unknown location</string>

  <string name="batched_location_updates">Batched location updates</string>

  <plurals name="num_locations_reported">
    <item quantity="zero">No location reported</item>
    <item quantity="one">One location reported</item>
    <item quantity="other">%d locations reported</item>
  </plurals>

  <string name="default_channel">Default channel</string>

  <string name="type_a_message">Type a message...</string>
  <string name="action_profile">Profile</string>
  <string name="action_block">Block</string>
  <string name="requisition_details">Requisition Details</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="create_requisition">Create Requisition</string>
  <string name="add_another_task_id">Add Another Task Id</string>
  <string name="title_activity_maps">Map</string>

  <string name="two_decimal_places">%.2f</string>

  <string name="notification_activity_title">নতুন আউটলেট</string>
  <string name="slider_collect">স্লাইডার সংগ্রহ </string>
  <string name="msg_customer_select_error">কাস্টমার সিলেক্ট করুন</string>
  <string name="customer">কাস্টমার</string>
  <string name="msg_packet_quantity_not_given">প্যাকেটের পরিমান উল্লেখ করুন</string>
  <string name="packet_quantity">প্যাকেটের পরিমান</string>
  <string name="quantity">পরিমান</string>
  <string name="customer_select">কাস্টমার সিলেক্ট</string>
  <string name="msg_slider_collect_success">স্লাইডার সংগ্রহ সম্পন্ন হয়েছে</string>
  <string name="no_outlet_found">নতুন আউটলেট খুঁজে পাওয়া যায় নি</string>
  <string name="sale">বিক্রয়</string>
  <string name="visited">ভিজিটেড</string>
  <string name="logout">লগ আউট</string>
  <string name="cigaretee">সিগারেট</string>
  <string name="bidi">বিড়ি</string>
  <string name="match">ম্যাচ</string>
  <string name="customer_nirbachon">কাস্টমার নির্বাচন করুন</string>
  <string name="save">Save</string>
  <string name="productname">পণ্যের নাম</string>
  <string name="money_amount">টাকার পরিমাণ</string>
  <string name="dam">ড্যাম সংগ্রহ</string>
  <string name="report">রিপোর্ট</string>
  <string name="slide_collect">স্লাইড সংগ্রহ</string>
  <string name="sync">সিংক</string>


</resources>
